- added method SCIPdoNotMultaggr() returning whether multi-aggregation is completely disabled
- added method SCIPconsIsMarkedPropagate() to ask whether a constraint was explicitly added for propagation
- SCIPgetConsCopy() now always captures the created constraint
- SCIPaddCut() has an additional parameter that determines whether the cut to be added is infeasible

parameters:
- new parameter <lp/disablecutoff> (default FALSE), by which the LP cutoff bound can be disabled (when set to TRUE)
- new parameter <separating/gomory/sidetypebasis> to decide whether the sides of ranged rows should be determined from
  the basis status
- new parameter <write/allconss> to enable that all constraints are written
- new parameter <constraints/indicator/scaleslackvar> for scaling of the slack variable in indicator constraints
- added <conflict/maxvarsdetectimpliedbounds> parameter to decide whether the a valid conflict of what maximal length
  will be used to derive global bound changes
- added <conflict/fullshortenconflict> parameter to decide whether we want to stop shortening a conflict set, when no
  global bound changes can be found anymore
- changed default max coefficient for big-M constraint to be initial from 1e6 to 1e9
- changed default reliability branching parameter DEFAULT_MAXLOOKAHEAD from 8 to 9, that increases the number of further
  variables evaluated without better score
- changed default gomory cut separation parameter DEFAULT_MAXRANK from 0 to 3, to take also gomory cuts, that could not
  be scaled to integral coefficients, with maximal rank 3 into account
- removed all local parameters "reading/(READER)/dynamic{conss|cols|rows}" and replaced them by global parameters
  "reading/dynamic{conss|cols|rows}"
- new parameter "reading/(READER)/initialconss" that determines whether model constraints are initial
- new parameter "constraints/xor/addextendedform" to add an extended formulation in XOR-constraints